--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.9.7",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.3.3"
     },
@@ -32,6 +33,7 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.10.4",
+        "@types/nodemailer": "^6.4.14",
         "nodemon": "^3.0.2"
     }
 }
