update:/ access token secret name change for meaningful

--- a/example.env
+++ b/example.env
@@ -19,8 +19,12 @@ REDIS_URL =
 # Token
 # Token
 JWT_SECRET=
-ACCESS_TOKEN=
-REFRESH_TOKEN=
+
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+
+ACCESS_TOKEN_EXPIRE=
+REFRESH_TOKEN_EXPIRE=
 
 # SMTP ENV
 SMTP_HOST=
